add_library(
  test_assets
  test_animimg001.c
  test_animimg002.c
  test_animimg003.c
  test_arc_bg.c
  test_font_1.c
  test_font_1_bin.c
  test_font_2.c
  test_font_2_bin.c
  test_font_3.c
  test_font_3_bin.c
  test_font_montserrat_ascii_1bpp.c
  test_font_montserrat_ascii_2bpp.c
  test_font_montserrat_ascii_3bpp_compressed.c
  test_font_montserrat_ascii_4bpp.c
  test_font_montserrat_ascii_8bpp.c
  test_imagebutton_left.c
  test_imagebutton_mid.c
  test_imagebutton_right.c
  test_img_bulb_gif.c
  test_img_caret_down.c
  test_img_cogwheel_a8.c
  test_img_cogwheel_argb8888.c
  test_img_cogwheel_i4.c
  test_img_cogwheel_rgb565.c
  test_img_cogwheel_rgb565a8.c
  test_img_cogwheel_xrgb8888.c
  test_img_emoji_F617.c
  test_img_lvgl_logo_jpg.c
  test_img_lvgl_logo_png.c
  test_img_svg.c
  test_lottie_approve.c
  test_music_button_play.c
  test_ubuntu_font.c)
