# =============================================================================
# Subsystems
# =============================================================================

add_tests(TESTS test_config)

add_subdirectory(core)
add_subdirectory(demos)
add_subdirectory(display)
add_subdirectory(draw)
add_subdirectory(drivers)
add_subdirectory(font)
add_subdirectory(indev)
add_subdirectory(layouts)
add_subdirectory(libs)
add_subdirectory(misc)
add_subdirectory(others)
add_subdirectory(stdlib)
add_subdirectory(themes)
add_subdirectory(widgets)
